--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,13 @@
     <string name="login">Masuk</string>
     <string name="textRegister">Belum Memiliki Akun?</string>
     <string name="registerBtnText"><u>Daftar Disini</u></string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_news">News</string>
+    <string name="title_profile">Profile</string>
+    <string name="profileText">PROFILE PENGGUNA</string>
+    <string name="logout">LOG OUT</string>
 
 </resources>
