feat: news UI implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
         Selamat datang di <b>AlumniConnect!</b> Kami di sini untuk membantu Anda dengan cara yang mudah dan menyenangkan dalam mengelola dan memperbarui informasi alumni. Dengan berbagai fitur menarik, Anda bisa terhubung lagi dengan teman lama, memperluas jaringan profesional Anda, dan memastikan informasi alumni tetap up-to-date. Ayo, jalin kembali hubungan berharga Anda dan nikmati pengalaman ini bersama kami!
         ]]>
     </string>
+    <string name="image_desc">gambar Berita</string>
+    <string name="example20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n</string>
+    <string name="example50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
 </resources>
